clusters/crc-canary-upgrade/overlays/istio-ingressgateway/authorizationpolicy-allowed-ips.yaml
# https://istio.io/v1.20/docs/tasks/security/authorization/authz-ingress/#ip-based-allow-list-and-deny-list
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allowed-ips
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
       remoteIpBlocks: 
         - 192.168.130.1
